kubernetes-manifests/cartservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartservice
spec:
  selector:
    matchLabels:
      app: cartservice
  template:
    metadata:
      labels:
        app: cartservice
    spec:
      nodeSelector:
        nodegroup: msdemo
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: cartservice
        ports:
        - containerPort: 7070
        resources:
          requests:
            cpu: 200m
            memory: 64Mi
          limits:
            cpu: 300m
            memory: 128Mi
        # readinessProbe:
        #   initialDelaySeconds: 15
        #   exec:
        #     command: ["/bin/grpc_health_probe", "-addr=:7070", "-rpc-timeout=5s"]
        # livenessProbe:
        #   initialDelaySeconds: 15
        #   periodSeconds: 10
        #   exec:
        #     command: ["/bin/grpc_health_probe", "-addr=:7070", "-rpc-timeout=5s"]
---
apiVersion: v1
kind: Service
metadata:
  name: cartservice
spec:
  type: ClusterIP
  selector:
    app: cartservice
  ports:
  - name: grpc
    port: 7070
    targetPort: 7070
