kubernetes-manifests/checkoutservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkoutservice
spec:
  selector:
    matchLabels:
      app: checkoutservice
  template:
    metadata:
      labels:
        app: checkoutservice
    spec:
      nodeSelector:
        nodegroup: msdemo
      serviceAccountName: default
      containers:
        - name: server
          image: checkoutservice
          ports:
          - containerPort: 5050
          # readinessProbe:
          #   exec:
          #     command: ["/bin/grpc_health_probe", "-addr=:5050"]
          # livenessProbe:
          #   exec:
          #     command: ["/bin/grpc_health_probe", "-addr=:5050"]
          resources:
            requests:
              cpu: 100m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 32Mi
---
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice
spec:
  type: ClusterIP
  selector:
    app: checkoutservice
  ports:
  - name: grpc
    port: 5050
    targetPort: 5050
