kubernetes-manifests/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      nodeSelector:
        nodegroup: msdemo
      serviceAccountName: default
      containers:
        - name: server
          image: frontend
          ports:
          - containerPort: 8080
          # readinessProbe:
          #   initialDelaySeconds: 10
          #   httpGet:
          #     path: "/_healthz"
          #     port: 8080
          #     httpHeaders:
          #     - name: "Cookie"
          #       value: "shop_session-id=x-readiness-probe"
          # livenessProbe:
          #   initialDelaySeconds: 10
          #   httpGet:
          #     path: "/_healthz"
          #     port: 8080
          #     httpHeaders:
          #     - name: "Cookie"
          #       value: "shop_session-id=x-liveness-probe"
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: "networking.k8s.io/v1"
kind: Ingress
metadata:
  name: ms-demo-frontend
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:939023695662:certificate/89701f3e-76c5-47ad-b94c-0f46198b54c7
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
spec:
  tls:
    - hosts:
        - "ms-demo.customersuccess.hny.wtf"
      secretName: ms-demo-tls
  rules:
    - host: "ms-demo.customersuccess.hny.wtf"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: refinery
                port:
                  name: data
